# llm-python-chat-app

./: .env.example  .gitignore  CHAT_HISTORY_GUIDE.md  CHAT_HISTORY_IMPLEMENTATION.md  CHAT_HISTORY_QUICK_REFERENCE.md  CHAT_SESSIONS_GUIDE.md  CHAT_SESSIONS_IMPLEMENTATION.md  DOCUMENTATION_INDEX.md  FOLLOWUP_IMPLEMENTATION_SUMMARY.md  FOLLOWUP_QUESTION_HANDLING.md  FOLLOWUP_QUICK_REFERENCE.md  FOLLOWUP_SOLUTION_SUMMARY.md  LANGCHAIN_MIGRATION.md  LANGCHAIN_QUICKSTART.md  Makefile  README.md  REFACTORING_SUMMARY.md  STREAMING_RESPONSE_GUIDE.md  STREAMLIT_OOP_ARCHITECTURE.md  pyproject.toml  requirements.txt  setup_and_test.sh  test_followup_handling.py
data/: chat_history.json  conversation.md  test_chat_history.json
scripts/: ingest.py  query_cli.py  run_api.py  streamlit_app.py
src/rag_app/api/: main.py  schemas.py
src/rag_app/core/: chat_history.py  chunker.py  config.py  embeddings.py  generator.py  retriever.py  vector_store.py
src/rag_app/ingestion/: loaders.py  pipeline.py
src/rag_app/utils/: logging.py
tests/: test_chunker.py
