[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-db-model"
version = "0.1.0"
description = "Production-ready starter for a Retrieval-Augmented Generation app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.34.0",
  "streamlit>=1.43.0",
  "chromadb>=1.0.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "pypdf>=5.1.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-huggingface>=0.1.0",
  "langchain-chroma>=0.1.0",
  "langchain-text-splitters>=0.1.0",
  "langchain-community>=0.3.0",
  "transformers>=4.46.0",
  "sentence-transformers>=3.0.0",
  "accelerate>=0.27.0",
  "bitsandbytes>=0.41.0",
  "safetensors>=0.4.0",
  "torch>=2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
  "mypy>=1.14.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
name = "rag-db-model"
version = "0.1.0"
description = "Production-ready starter for a Retrieval-Augmented Generation app"
readme = "README.md"
packages = [{ include = "rag_app", from = "src" }]

# Environment Variables
# HF_TOKEN: Hugging Face API token for authenticated model access
#   Get your token from: https://huggingface.co/settings/tokens
#   This enables access to gated models and higher rate limits

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
